--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,11 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+dump.sql
+util/freecad-addons.zip
+.vscode/launch.json
+test.csv
+freecad-addons.zip
+Resources/db/Materials-test.db
+Resources/db/Materials.db
